{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 321,
  "lineage": "088ee3a1-296b-8e0e-0036-c38e3f3b2e69",
  "resources": [
    {
      "module": "module.application",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "application",
            "metadata": [
              {
                "generation": 0,
                "name": "application",
                "resource_version": "77841",
                "uid": "3904f760-bb2f-4678-8e30-7ace2550aa1f"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "application"
          }
        }
      ]
    },
    {
      "module": "module.cicd",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "cicd",
                  "app.kubernetes.io/name": "argocd"
                },
                "name": "argocd",
                "resource_version": "79265",
                "uid": "68ff194a-6fcd-4440-90d6-bb6d6a4d3e93"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "argocd"
          }
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "database",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "database"
                },
                "name": "database",
                "resource_version": "59453",
                "uid": "7b7c346d-18a9-4c8f-92f5-6377330447d6"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "database"
          }
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "id": "database/postgres",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "cnpg.io/cluster": "postgres-ha"
                },
                "name": "postgres",
                "namespace": "database",
                "resource_version": "59467",
                "uid": "e53d7aa7-052f-4373-bfb4-64e3fb44eaf8"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.132.247",
                "cluster_ips": [
                  "10.96.132.247"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 5432,
                    "protocol": "TCP",
                    "target_port": "5432"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "cnpg.io/cluster": "postgres-ha"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "postgres",
            "namespace": "database"
          },
          "dependencies": [
            "module.database.kubernetes_namespace.database"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "postgres_readonly",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "id": "database/postgres-readonly",
            "metadata": [
              {
                "generation": 0,
                "name": "postgres-readonly",
                "namespace": "database",
                "resource_version": "59462",
                "uid": "87adce39-6143-4ada-ae2b-dc1329d0f607"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.220.194",
                "cluster_ips": [
                  "10.96.220.194"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 5432,
                    "protocol": "TCP",
                    "target_port": "5432"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "cnpg.io/cluster": "postgres-ha",
                  "role": "replica"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "postgres-readonly",
            "namespace": "database"
          },
          "dependencies": [
            "module.database.kubernetes_namespace.database"
          ]
        }
      ]
    },
    {
      "module": "module.ingress",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "ingress_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ingress-nginx",
            "metadata": [
              {
                "generation": 0,
                "name": "ingress-nginx",
                "resource_version": "77843",
                "uid": "501e57d4-385c-4fec-8110-71f97d7f9d1c"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "ingress-nginx"
          }
        }
      ]
    },
    {
      "module": "module.monitoring",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "generation": 0,
                "name": "monitoring",
                "resource_version": "25366",
                "uid": "7fb6a861-53a0-445f-9ec1-cd7b6009c33d"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "monitoring"
          }
        }
      ]
    },
    {
      "module": "module.observability",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "observability",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "observability",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "observability",
                  "app.kubernetes.io/name": "observability"
                },
                "name": "observability",
                "resource_version": "81321",
                "uid": "467ca0ef-1d31-43c8-9fee-ef9fcf1bf005"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "observability"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "istio_system",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "istio-system",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "istio-injection": "enabled"
                },
                "name": "istio-system",
                "resource_version": "28923",
                "uid": "bda4a81c-22ca-499e-94c3-d74459105d33"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "istio-system"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "security",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "security",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "security"
                },
                "name": "security",
                "resource_version": "26817",
                "uid": "d7b562ba-91dc-42ce-be98-f195108a8d38"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "security"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "allow_dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "security/allow-dns",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-dns",
                "namespace": "security",
                "resource_version": "76271",
                "uid": "3fb5d15a-da0a-4794-ad04-1e1af9040d80"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "UDP"
                      },
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "name": "kube-system"
                            }
                          }
                        ],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "k8s-app": "kube-dns"
                            }
                          }
                        ]
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-dns",
            "namespace": "security"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "allow_ingress_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ingress-nginx/allow-ingress-nginx",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-ingress-nginx",
                "namespace": "ingress-nginx",
                "resource_version": "76268",
                "uid": "c3d49672-9723-4f07-982e-abc1ee921bab"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "name": "ingress-nginx"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-ingress-nginx",
            "namespace": "ingress-nginx"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "app_allow_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "application/app-allow-public",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "app-allow-public",
                "namespace": "application",
                "resource_version": "76273",
                "uid": "350209c4-5b99-452c-9442-6365d224d27e"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "name": "ingress-nginx"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": {
                      "app.kubernetes.io/component": "application"
                    }
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "app-allow-public",
            "namespace": "application"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "app_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "application/app-egress-all",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "app-egress-all",
                "namespace": "application",
                "resource_version": "77140",
                "uid": "a2cf8951-8c74-4647-82bf-e49db2d5dbbf"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [],
                    "to": [
                      {
                        "ip_block": [
                          {
                            "cidr": "0.0.0.0/0",
                            "except": []
                          }
                        ],
                        "namespace_selector": [],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "app-egress-all",
            "namespace": "application"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "database_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "database/database-private",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "database-private",
                "namespace": "database",
                "resource_version": "76266",
                "uid": "4a250388-456c-4f91-a8dd-27ef77b670e4"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "name": "application"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "5432",
                        "protocol": "TCP"
                      }
                    ]
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "database-private",
            "namespace": "database"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "default_deny_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "security/default-deny-egress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "default-deny-egress",
                "namespace": "security",
                "resource_version": "76269",
                "uid": "8147acfb-9852-4981-a339-f7a95cad4cb3"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "default-deny-egress",
            "namespace": "security"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "default_deny_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "security/default-deny-ingress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "default-deny-ingress",
                "namespace": "security",
                "resource_version": "76264",
                "uid": "d0a13742-9a6a-4299-8e0a-f1ed2c326953"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "default-deny-ingress",
            "namespace": "security"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "external_secrets_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "security/external-secrets-allow-all",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "external-secrets-allow-all",
                "namespace": "security",
                "resource_version": "77984",
                "uid": "a968a09e-7a2b-4e90-ab15-b12d59b8d4d6"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [],
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "10250",
                        "protocol": "TCP"
                      }
                    ]
                  },
                  {
                    "from": [],
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "8080",
                        "protocol": "TCP"
                      }
                    ]
                  },
                  {
                    "from": [],
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "9443",
                        "protocol": "TCP"
                      }
                    ]
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": {
                      "app.kubernetes.io/name": "external-secrets"
                    }
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "external-secrets-allow-all",
            "namespace": "security"
          },
          "dependencies": [
            "module.security.kubernetes_namespace.security"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "external_secrets_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "security/external-secrets-egress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "external-secrets-egress",
                "namespace": "security",
                "resource_version": "77983",
                "uid": "e98edc4d-c8bf-4d8e-b22c-38a1b1942f50"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "UDP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "name": "kube-system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  },
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "443",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [
                          {
                            "cidr": "0.0.0.0/0",
                            "except": [
                              "169.254.169.254/32"
                            ]
                          }
                        ],
                        "namespace_selector": [],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": {
                      "app.kubernetes.io/name": "external-secrets"
                    }
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "external-secrets-egress",
            "namespace": "security"
          },
          "dependencies": [
            "module.security.kubernetes_namespace.security"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "ingress_nginx_to_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ingress-nginx/ingress-nginx-to-app",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "ingress-nginx-to-app",
                "namespace": "ingress-nginx",
                "resource_version": "77141",
                "uid": "d150576c-1d6a-465b-82d5-8df89c12fda1"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "name": "application"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  },
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "UDP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "name": "kube-system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  },
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "443",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "name": "kube-system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "name": "ingress-nginx"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "ingress-nginx-to-app",
            "namespace": "ingress-nginx"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "istio_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "istio-system/istio-private",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "istio-private",
                "namespace": "istio-system",
                "resource_version": "76270",
                "uid": "c13f7b89-9e56-453a-95dc-8287955c48f8"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "UDP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "name": "kube-system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  },
                  {
                    "ports": [],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "name": "istio-system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  },
                  {
                    "ports": [],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "istio-injection": "enabled"
                            }
                          }
                        ]
                      }
                    ]
                  }
                ],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "name": "istio-system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": []
                  },
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "istio-injection": "enabled"
                            }
                          }
                        ]
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "istio-private",
            "namespace": "istio-system"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "monitoring_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "monitoring/monitoring-private",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "monitoring-private",
                "namespace": "monitoring",
                "resource_version": "76267",
                "uid": "fcf27036-cdb7-4b5d-a0d9-4a71d4e9682f"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "name": "monitoring"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "monitoring-private",
            "namespace": "monitoring"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "security_internal_only",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "security/security-internal-only",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "security-internal-only",
                "namespace": "security",
                "resource_version": "76272",
                "uid": "410b8c05-4eb3-49ff-acab-94107393be9f"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "name": "security"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "security-internal-only",
            "namespace": "security"
          }
        }
      ]
    }
  ]
}